wmt-application-web/src/main/webapp/css/WMT.css
/*  WMT.css  
    author: Theodore Walton
    author: Bruce Schubert 
*/


/* Fire Lookout viewer: make the tabs fill the dialog, up to a point*/
#lookout-tabs .pui-tabview {
    width: 100%;
    height: 100%;
    max-width: 400px;        
}
/*Fire Lookout viewer: override the 'auto' width on dropdowns fuel model tab*/
#lookout-fuel-tab .pui-dropdown {
    width: 100%
}
/*Fire Lookout viewer: allow the weather datatable to fill the entire tab*/
#lookout-weather-tab {
    padding-right: 0 !important;
    padding-left: 0;
    padding-bottom: 0;
    padding-top: 0;
}

#timeControlSlider {
    position: absolute;  /*sets it's position relative to the document instead of the container. Allows the bottom property to be used to force the element to the bottom of the view.  */
    bottom: 5%;   
    left: 29%;
}

#timeControlSlider .ui-slider-handle {
    background:#3e444c;
    top:3px;
}

#sidebar-left.affix-top {
    position: static;
    margin-top:30px;
    width:100px;
}

#sidebar-left.affix {
    position: fixed;
    top:70px;
    width:228px;
}


.ui-slider-horizontal {
    background:#272b30;
    border:#272b30;
}

.ui-slider-range {
    background:#272b30;
    border:#272b30;
}


#canvas-wrap canvas { 
    position: relative;
    top: 0;
    left: 0; 
    z-index: 0 !important; 
    width: 100%; 
    height: 100%;
    padding-left: 0;
    padding-right: 0
}

/*Custom cursor for when the user drags in the globe*/
#canvasOne:active { 
    cursor: pointer;
}

#globe { 
    padding-left: 0;
    padding-right: 0        
}

.container-full {
    margin: 0 auto;
    width: 100%;
    height: 100%;
    min-height:100%;
}

/*Style used in dropdown menus*/
img.icon {
    width: 24px;
    height: 24px;
}

/*Style used to pull the globe up flush with the navbar*/
.navbar-nomargin {
    margin-bottom: 0;   /* override default of 20px */
}

.non-interactive { 
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    -o-user-select: none;
    pointer-events: none;
}
.interactive {
    -webkit-touch-callout: auto !important;
    -webkit-user-select: auto !important;
    -khtml-user-select: auto !important;
    -moz-user-select: auto !important;
    -ms-user-select: auto !important;
    -o-user-select: auto !important;
    pointer-events: auto !important;
}

.noselect {
    -webkit-touch-callout: none;
    /* -webkit-user-select: none; */
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.panel-heading:hover {
    background-color: rgba(0,0,0,0) !important;
}

/*Override PrimeUI Growl position to be below Bootstrap Navbar*/
.pui-growl {
    top: 50px;
}
.rest-panel-bottom {
    margin: 0 auto;
    position: absolute;
    bottom: 0;
    height: 125px; /* was 25%;*/
    width: 100%;
}
.rest-panel-bottom table {
    background-color: transparent;
}

.row {
    margin-right: 0;
    margin-left: 0;
}

.row-full {
    margin-right: 0;
    margin-left: 0;
    height: 100%;
}


#searchResults-globe canvas { 
    position: relative;
    top: 0;
    left: 0; 
    z-index: 0 !important; 
    width: 100%; 
    height: 200px;
    padding-left: 0;
    padding-right: 0
}

#markerList {
    max-height: calc(50vh); 
    /*max-width: calc(10vw);*/
    max-width: 48px;
    overflow-y: scroll;
    border-radius: 6px; 
    border: 2px #000000 solid;
    border-top-width: 3px;
    border-bottom-width: 3px;
    display: inline-block;
}
#markerList .pui-panel-content {
    padding-top: 0;
    padding-bottom: 0;
    padding-left: 0;
    padding-right: 0;
}

